# Studienprojekt_Sommer23

./: .gitignore  CMakeLists.txt  Make.lst  Makefile  README.md  Succesive_Shortest_Path.cpp
include/LEDA/coding/: base64.h  jpeg.h  png.h  sha.h  zlib.h  zstream.h
include/LEDA/core/: IO_interface.h  array.h  array2.h  b_prio.h  b_queue.h  b_stack.h  basic_alg.h  bin_search.h  d_array.h  d_int_set.h  dictionary.h  growing_array.h  h_array.h  int_set.h  list.h  map.h  map2.h  misc.h  p_queue.h  partition.h  prio.h  queue.h  quicksort.h  random.h  random_source.h  random_variate.h  set.h  slist.h  sort.h  sortseq.h  stack.h  string.h  tuple.h
include/LEDA/geo/: circle.h  curve_sweep.h  curve_sweep_traits.h  d3_delaunay.h  d3_dictionary.h  d3_float_kernel.h  d3_float_kernel_names.h  d3_float_kernel_types.h  d3_float_kernel_undef.h  d3_hull.h  d3_line.h  d3_plane.h  d3_point.h  d3_rat_kernel.h  d3_rat_kernel_names.h  d3_rat_kernel_types.h  d3_rat_kernel_undef.h  d3_rat_line.h  d3_rat_plane.h  d3_rat_point.h  d3_rat_ray.h  d3_rat_segment.h  d3_rat_simplex.h  d3_rat_sphere.h  d3_rat_triangle.h  d3_ray.h  d3_segment.h  d3_simplex.h  d3_sphere.h  d3_triangle.h  delaunay.h  dxf_io.h  float_delaunay.h  float_geo_alg.h  float_kernel.h  float_kernel_names.h  float_kernel_types.h  float_kernel_undef.h  gen_plane_sweep.h  gen_polygon.h  (+71 more)
include/LEDA/graph/: alg_five_color.h  b_node_pq.h  basic_graph_alg.h  c_obj_list.h  dimacs.h  dimacs_graph.h  dimacs_graph0.h  edge_array.h  edge_array2.h  edge_data.h  edge_map.h  edge_set.h  edge_slot.h  edge_slot1.h  euler_tour.h  face_array.h  face_map.h  fd_graph.h  (+63 more)
lib/: README.md
src/: Cycle_Canceling.cpp  Succesive_Shortest_Path.cpp  help.txt
(+226 files in other folders)
